<resources>
    <string name="app_name">Profiles</string>
    <string name="password_login_error">This password is invalid</string>
    <string name="username_login_error">This field is required</string>
    <string name="default_login_error">This email addres and password you entered do not match.</string>
    <string name="default_user_unregister">Unregister user</string>
    <string name="default_incorrect_password">Incorrect password</string>
    <string name="default_exception_error">Unexpected error.</string>
    <string name="default_connect_error">A failure in the server connection has been detected.</string>
    <string name="default_soap_error">Unexpected soap error.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="finish_profile">Finalizar</string>
    <string name="next_profile">Siguiente</string>
    <string name="back_profile">Anterior</string>
    <string name="default_attaching_img_error">Error intentando adjuntar imagen</string>
    <string name="default_field_required">Este campo es requerido</string>
    <string name="default_question_delete_back">¿ Desea eliminar la imagen asociada a la Credencial INE (Reverso) ?</string>
    <string name="default_question_delete_front">¿ Desea eliminar la imagen asociada a la Credencial INE (Frente) ?</string>
    <string name="default_title_alert_dialog">Importante</string>
    <string name="default_positive_button">Confirmar</string>
    <string name="default_negative_button">Cancelar</string>
    <string name="default_delete_img_msg">Imagen borrada correctamente</string>
    <string name="default_save_profile">Registro perfil</string>
    <string name="default_loading_msg">Espere un momento por favor</string>
    <string name="default_save_local">Perfil almacenado de manera local</string>
    <string name="action_sync">Sincronizar</string>
    <string name="default_sync_title">Sincronizando</string>
    <string name="default_sync_ok">Sincronizado Correctamente</string>
    <string name="default_sync_question">¿Desea sincronizar con el servidor?</string>
    <string name="default_logout">Cerrar Sessión</string>
    <string name="default_search_profile">Consultar</string>
    <string name="default_loading_title">Espere un momento por favor...</string>
    <string name="default_profile_edit_msg">¿Desea editar el perfil?</string>
    <string name="default_profile_delete_msg">¿Desea eliminar el perfil?</string>
    <string name="default_profile_data_msg">Obteniendo información del perfil ...</string>
    <string name="default_download_msg">Descargando actualizaciones de catalogos</string>
    <string name="default_delete_profile_msg">Eliminando perfil ...</string>
    <string name="default_edit_profile_title">Editar Usuario</string>
    <string name="defaut_profile_exit_question">¿Desea salir de editar el perfil?</string>
    <string name="default_add_profile">Registar</string>

</resources>
