<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center_horizontal"
    tools:context="app.texium.com.profiles.fragments.ProfessionalProfileFragment"
    android:backgroundTint="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registar Usuario"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Datos Laborales"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Número de Seguro Social"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp" />
            <EditText
                android:id="@+id/firstSurname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Nivel de Estudios"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/secondSurname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Carrera"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Documentos Obtenidos"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/electoralAdviser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Empleo Actual"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/politicalParty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Empresa"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_form"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backBtnProfessionalProfile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/back_profile"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/finish_profile"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/nextBtnProfessionalProfile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/next_profile"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</FrameLayout>
