<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimaryLight"
    tools:context="app.texium.com.profiles.fragments.StructureProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/structureProfileTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registar Usuario"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Estructura"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="end">

                    <Button
                        android:visibility="invisible"
                        android:id="@+id/structureExit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="8dp"
                        android:background="@mipmap/ic_arrow_back_black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/committee"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_form"
                    android:hint="Comité"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    />

                <EditText
                    android:id="@+id/reference"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_form"
                    android:hint="Referencia"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_form"
                    android:hint="Enlace"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/coordinator"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_form"
                    android:hint="Coordinador"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_space" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDivider"
            android:orientation="horizontal"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="1dp">

            <Button
                android:id="@+id/backBtnStructureProfile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/back_profile"
                android:textColor="@color/colorPrimaryText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/finish_profile"
                android:textColor="@color/colorPrimaryText"
                android:visibility="invisible" />

            <Button
                android:id="@+id/nextBtnStructureProfile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/next_profile"
                android:textColor="@color/colorPrimaryText" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
